fix swaggerui with additional param
